--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@ Similarly, observing nature helps us appreciate the intricate beauty and complex
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Abu Dhabi, UAE</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +971 567337877</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: hamdah.alsuwaidi@gmail.com</p>
-    </div>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email: hja3557@nyu.edu</p>
+    </div><br>
+    <p>Send me a message:</p>
 
-    <!-- Contact Form -->
-    <form action="mailto:hamdah.alsuwaidi@gmail.com" method="post" enctype="text/plain">
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><textarea class="w3-input w3-padding-16 w3-border" placeholder="Message" required name="Message"></textarea></p>
+    <form action="/action_page.php" target="_blank">
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
       <p>
         <button class="w3-button w3-light-grey w3-padding-large" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
@@ -179,44 +179,43 @@ Similarly, observing nature helps us appreciate the intricate beauty and complex
 
   <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <a href="#"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-    <p class="w3-medium">Developed by Hamdah AlSuwaidi</p>
+    <a href="https://github.com/hamdahal" class="w3-button w3-padding-large w3-hover-light-grey w3-dark-grey w3-margin-bottom"><i class="fa fa-github w3-margin-right"></i>My Github</a>
+    <a href="https://www.instagram.com/hamdah_alsuwaidi/" class="w3-button w3-padding-large w3-hover-light-grey w3-dark-grey w3-margin-bottom"><i class="fa fa-instagram w3-margin-right"></i>My Instagram</a>
+    <a href="https://www.linkedin.com/in/hamdahal/" class="w3-button w3-padding-large w3-hover-light-grey w3-dark-grey w3-margin-bottom"><i class="fa fa-linkedin w3-margin-right"></i>My LinkedIn</a>
+    <a href="https://twitter.com/hamdahal" class="w3-button w3-padding-large w3-hover-light-grey w3-dark-grey w3-margin-bottom"><i class="fa fa-twitter w3-margin-right"></i>My Twitter</a>
   </footer>
+  
 </div>
 
+<!-- JavaScript for the slideshow -->
 <script>
-// Slideshow JavaScript
-var slideIndex = 1;
-showDivs(slideIndex);
+  var slideIndex = 1;
+  showDivs(slideIndex);
 
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function currentDiv(n) {
-  showDivs(slideIndex = n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demodots");
-  if (n > x.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
+  function plusDivs(n) {
+    showDivs(slideIndex += n);
   }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" w3-white", "");
+
+  function currentDiv(n) {
+    showDivs(slideIndex = n);
   }
-  x[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " w3-white";
-}
+
+  function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("demodots");
+    if (n > x.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = x.length}
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";  
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" w3-white", "");
+    }
+    x[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " w3-white";
+  }
 </script>
+
 </body>
 </html>
